--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ body {
   padding:0;
   font-family: var(--font);
   background: linear-gradient(180deg, #000000 0%, #0a0a0a 50%, #000000 100%);
-  color:#fff;
+  color:#ffffff;
   overflow-x:hidden;
 }
 
@@ -53,12 +53,12 @@ body {
   position:relative;
   margin-bottom:20px;
   border: 3px solid transparent;
-  border-image: linear-gradient(45deg, #550cff, #00d4ff, #ff0080, #550cff) 1;
+  border-image: linear-gradient(45deg, #4f06f8, #00d4ff, #ff0080, #550cff) 1;
   border-radius: 15px;
   padding: 20px 30px;
   background: linear-gradient(145deg, rgba(85,12,255,0.1), rgba(0,212,255,0.05));
   backdrop-filter: blur(20px);
-  box-shadow: 0 0 50px rgba(85,12,255,0.5), inset 0 0 50px rgba(85,12,255,0.1);
+  box-shadow: 0 0 50px rgba(82, 8, 255, 0.979), inset 0 0 50px rgba(85,12,255,0.1);
   overflow: hidden;
   text-align: center;
   display: block;
@@ -69,7 +69,7 @@ body {
   position:absolute;
   top:0; left:-100%;
   width:100%; height:100%;
-  background:linear-gradient(90deg, transparent, rgba(255,255,255,0.2), transparent);
+  background:linear-gradient(90deg, transparent, rgb(250, 247, 247), transparent);
   animation: shimmer 6s infinite;
 }
 
@@ -493,7 +493,7 @@ body {
   font-weight:700;
   font-size:0.9rem;
   transition:0.3s ease;
-  box-shadow:0 4px 15px rgba(88,101,242,0.4);
+  box-shadow:0 4px 15px rgba(159, 5, 248, 0.993);
 }
 .discord-link:hover {
   transform:translateY(-2px) scale(1.05);
@@ -644,7 +644,14 @@ body {
 <!-- HERO -->
 <header class="hero">
   <div>
-    <h1><img src="images/byte studio.png" alt="Byte Studio Logo" style="width: 50px; height: 50px; margin-right: 10px; vertical-align: middle;"> BYTE STUDIO</h1>
+    <h1>
+      <img
+        src="images/byte-studio.png"
+        alt="Byte Studio Logo"
+        style="width:50px;height:50px;margin-right:10px;vertical-align:middle;"
+      />
+      BYTE STUDIO
+    </h1>
     <div class="star-rating">
       <span class="star" data-rating="1">★</span>
       <span class="star" data-rating="2">★</span>
@@ -653,12 +660,11 @@ body {
       <span class="star" data-rating="5">★</span>
       <span class="rating-text">5.0 (Top Rated)</span>
     </div>
-    <p class="tagline">Roblox Game Engineering • UI Systems • Gameplay Mechanics • 3D Gun Modeling</p>
+    <p class="tagline">Expert Roblox Development: Full-Stack Game Engineering, Advanced UI/UX Systems, Innovative Gameplay Mechanics, Precision 3D Modeling</p>
     <a class="btn btn-emerald" href="#portfolio">🎮 Our Roblox Portfolio</a>
     <a class="btn btn-secondary" href="https://t.me/@Bytestudio1">Hire Our Team</a>
     <a class="btn btn-secondary" href="https://www.roblox.com/users/10177181201/profile">Roblox Studio</a>
   </div>
-  <img src="samples/team-hero.webp" width="460"/>
 </header>
 
 <!-- METRICS -->
@@ -712,7 +718,7 @@ body {
   </div>
    <div class="grid">
     <div class="card" data-status="completed">
-      <video src="samples/FPS Combat System.mp4" controls muted></video>
+      <video src="samples/FPS%20Combat%20System.mp4" controls muted></video>
       <div class="info">
         <h4>🎯 FPS Combat System</h4>
         <p class="description">Advanced first-person shooter mechanics with realistic ballistics, recoil systems, and multiplayer synchronization.</p>
@@ -720,7 +726,7 @@ body {
       </div>
     </div>
     <div class="card" data-status="completed">
-      <img src="samples/shop ui.png" alt="Advanced UI Framework">
+      <img src="samples/shop-ui.png" alt="Advanced UI Framework">
       <div class="info">
         <h4>🖥️ Advanced UI Framework</h4>
         <p class="description">Modular UI system with dynamic layouts, animations, and responsive design for seamless user experiences.</p>
@@ -728,7 +734,7 @@ body {
       </div>
     </div>
     <div class="card" data-status="completed">
-      <img src="samples/roblox axe.jpg" alt="axe Modeling Pack">
+      <img src="samples/roblox-axe.jpg" alt="axe Modeling Pack">
       <div class="info">
         <h4>🔫 Axe Modeling Pack</h4>
         <p class="description">High-detail 3D Axe models with textures, animations, and performance-optimized for Roblox environments.</p>
@@ -736,7 +742,7 @@ body {
       </div>
     </div>
     <div class="card" data-status="completed">
-      <img src="samples/roblox Inventory System.jpeg" alt="Inventory System">
+      <img src="samples/roblox-inventory-system.jpeg" alt="Inventory System">
       <div class="info">
         <h4>📦 Inventory System</h4>
         <p class="description">Comprehensive inventory management with drag-and-drop, stacking, and persistent data storage. Inventory sample.</p>
@@ -744,7 +750,7 @@ body {
       </div>
     </div>
     <div class="card" data-status="completed">
-      <video src="samples/Anime Fighting Core.mp4" controls muted></video>
+      <video src="samples/Anime%20Fighting%20Core.mp4" controls muted></video>
       <div class="info">
         <h4>⚔️ Anime Fighting Core</h4>
         <p class="description">Dynamic combat system with combo chains, special moves, and character progression mechanics.</p>
@@ -752,7 +758,7 @@ body {
       </div>
     </div>
     <div class="card" data-status="completed">
-      <img src="samples/open world map.jpeg" alt="Open World Map">
+      <img src="samples/open-world-map.jpeg" alt="Open World Map">
       <div class="info">
         <h4>🌍 Open World Map</h4>
         <p class="description">Large-scale procedural world generation with biomes, quests, and interactive environments.</p>
@@ -760,7 +766,7 @@ body {
       </div>
     </div>
     <div class="card" data-status="completed">
-      <img src="samples/roblox Vehicle Physics.jpg" alt="Vehicle Physics">
+      <img src="samples/roblox-vehicle-physics.jpg" alt="Vehicle Physics">
       <div class="info">
         <h4>🚗 Vehicle Physics</h4>
         <p class="description">Realistic vehicle simulation with suspension, engine mechanics, and customizable handling.</p>
@@ -768,7 +774,7 @@ body {
       </div>
     </div>
     <div class="card" data-status="completed">
-      <video src="samples/roblox animation.mp4" controls muted></video>
+      <video src="samples/roblox%20animation.mp4" controls muted></video>
       <div class="info">
         <h4>✨ VFX & Animations</h4>
         <p class="description">Stunning visual effects and fluid animations for immersive gameplay experiences.</p>
@@ -776,7 +782,7 @@ body {
       </div>
     </div>
     <div class="card" data-status="completed">
-      <img src="samples/roblox scripting.PNG" alt="Datastore Backend">
+      <img src="samples/roblox-scripting.png" alt="Datastore Backend">
       <div class="info">
         <h4>💾 Datastore Backend</h4>
         <p class="description">Robust data persistence system with backup, versioning, and cross-server synchronization.</p>
@@ -784,7 +790,7 @@ body {
       </div>
     </div>
     <div class="card" data-status="completed">
-      <img src="samples/roblox matchmaking system.jpg" alt="Matchmaking System">
+      <img src="samples/roblox-matchmaking-system.jpg" alt="Matchmaking System">
       <div class="info">
         <h4>🎮 Matchmaking System</h4>
         <p class="description">Advanced player matching algorithm with skill-based balancing and region optimization. Matchmaking sample.</p>
@@ -792,7 +798,7 @@ body {
       </div>
     </div>
     <div class="card" data-status="completed">
-      <img src="samples/roblox Roleplay UI.jpeg" alt="Roleplay UI">
+      <img src="samples/roblox-roleplay-ui.jpeg" alt="Roleplay UI">
       <div class="info">
         <h4>🎭 Roleplay UI</h4>
         <p class="description">Interactive roleplay interface with character customization, dialogue systems, and social features. Roleplay UI sample.</p>
@@ -800,7 +806,7 @@ body {
       </div>
     </div>
     <div class="card" data-status="completed">
-      <img src="samples/weapon shop ui.jpg" alt="Weapon Shop UI">
+      <img src="samples/weapon-shop-ui.jpg" alt="Weapon Shop UI">
       <div class="info">
         <h4>🛒 Weapon Shop UI</h4>
         <p class="description">Elegant marketplace interface with preview systems, purchase flows, and inventory integration. Weapon Shop UI sample.</p>
@@ -808,7 +814,7 @@ body {
       </div>
     </div>
     <div class="card" data-status="completed">
-      <img src="samples/leaderboard system.jpg" alt="Leaderboard System">
+      <img src="samples/leaderboard-system.jpg" alt="Leaderboard System">
       <div class="info">
         <h4>🏆 Leaderboard System</h4>
         <p class="description">Global ranking system with seasonal resets, achievements, and competitive statistics. Leaderboard sample.</p>
@@ -816,7 +822,7 @@ body {
       </div>
     </div>
     <div class="card" data-status="completed">
-      <img src="samples/npc ai system.jpg" alt="NPC AI System">
+      <img src="samples/npc-ai-system.jpg" alt="NPC AI System">
       <div class="info">
         <h4>🤖 NPC AI System</h4>
         <p class="description">Intelligent non-player characters with pathfinding, behavior trees, and dynamic interactions. NPC AI sample.</p>
@@ -824,7 +830,7 @@ body {
       </div>
     </div>
     <div class="card" data-status="completed">
-      <img src="samples/optimization pass.png" alt="Optimization Pass">
+      <img src="samples/optimization-pass.png" alt="Optimization Pass">
       <div class="info">
         <h4>⚡ Optimization Pass</h4>
         <p class="description">Performance enhancement project focusing on frame rate, memory usage, and loading times. Optimization sample.</p>
@@ -832,7 +838,7 @@ body {
       </div>
     </div>
     <div class="card" data-status="completed">
-      <img src="samples/procedural terrain generator.png" alt="Procedural Terrain Generator">
+      <img src="samples/procedural-terrain-generator.png" alt="Procedural Terrain Generator">
       <div class="info">
         <h4>🌋 Procedural Terrain Generator</h4>
         <p class="description">Advanced terrain generation system with biomes, caves, and dynamic weather integration. Terrain sample.</p>
@@ -857,7 +863,9 @@ body {
 
 <!-- 7 DEVS -->
 <section class="devs section">
-  <h2><img src="images/byte studio.png" alt="Byte Studio Logo" style="width: 50px; height: 50px; margin-right: 10px; vertical-align: middle;"> BYTE STUDIO EXPERT DEVELOPERS</h2>
+  <h2><img src="images/byte-studio.png"
+     alt="Byte Studio Logo"
+     style="width:50px;height:50px;margin-right:10px;vertical-align:middle;"> BYTE STUDIO EXPERT DEVELOPERS</h2>
   <div class="dev-grid">
     <div class="dev-card">
       <img src="images/team1.png" alt="Muhammed Ali" class="dev-img">
